# ingot

./: .env.example  Cargo.toml  LICENSE  Makefile  README.md  buf.work.yaml  build.rs  diesel.toml  docker-compose.yml
config/: regexes.yaml
examples/: response.json
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2025-01-03-015543_users/: up.sql
migrations/2025-01-03-211234_emails/: down.sql  up.sql
migrations/2025-01-03-220050_phones/: down.sql  up.sql
migrations/2025-01-03-220113_devices/: up.sql
migrations/2025-01-03-220137_organizations/: up.sql
migrations/2025-01-03-220204_roles/: up.sql
migrations/2025-01-03-220252_permissions/: up.sql
migrations/2025-01-04-085904_user_roles/: down.sql  up.sql
migrations/2025-01-04-085956_role_permissions/: down.sql  up.sql
migrations/2025-01-04-090644_membership/: up.sql
migrations/2025-01-04-091145_sessions/: up.sql
proto/api/auth/: auth.proto
proto/api/auth/v1/: auth.proto  model.proto
proto/api/devices/v1/: devices.proto  model.proto
proto/api/emails/v1/: email.proto  emails.proto  model.proto
proto/api/phones/v1/: model.proto  phones.proto
proto/api/users/v1/: model.proto  user.proto
src/: main.rs  models.rs  schema.rs
src/grpc/: mod.rs
src/grpc/auth/: mod.rs  service.rs
src/grpc/device/: mod.rs  service.rs
src/grpc/emails/: mod.rs  service.rs
src/grpc/phones/: mod.rs  service copy.rs  service.rs
src/grpc/users/: mod.rs  service.rs
src/utils/: hash.rs
